Dark mode - fix instance where the nav is collapsed. We shouldn't see a .content-card border in dark mode here

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -61,6 +61,9 @@
         background: var(--theme-color-content-bg);
         .nav-closed & {
             @apply sm:rounded-xl;
+            .dark & {
+              border: 0;
+            }
         }
     }
     .dark .content-card {
